== 2026-02-24 22:10 == Bugfix: Pressing 'q' in TUI kills tray and farmer on Windows (v1.2.3) ==

On Windows, pressing 'q' in the TUI called f.Stop() and exited the program, taking
the tray icon with it. Now 'q' hides the console instead — TUI keeps running hidden,
farmer stays alive, tray remains active. Only "Quit" from the tray menu exits.
- internal/ui/app.go (added OnQuit callback to Model, used in handleKey)
- cmd/twitchpoint/ui_windows.go (set OnQuit to hideConsole, use NewModel directly)

== 2026-02-24 22:00 == Bugfix: Windows auto-start not working with spaces in path (v1.2.2) ==

Registry Run value was unquoted, so paths with spaces (e.g. "C:\Users\John Doe\...")
were parsed incorrectly by Windows. Now wraps the exe path in double quotes.
- cmd/twitchpoint/autostart_windows.go (quoted exePath in SetStringValue)

== 2026-02-24 19:49 == Release: v1.2.1 — Drops mining, Windows system tray, and more ==

Major feature release combining the entire drops branch work.

NEW FEATURES:
- Twitch Drops mining: automatic inventory tracking, claiming, channel matching
  by allowed list or game directory, auto-select live channels, failover on
  offline/raid with 5min cooldown, campaign enable/disable from Web UI
- Windows system tray: TUI + tray icon side-by-side, Hide/Show Console toggle,
  Open Web UI, live stats in tray menu, Start with Windows auto-start (registry)
- Update notification system: checks for new stable/beta releases
- Web UI: Drop Campaigns table with toggle switch, TEMP/AUTO badges

IMPROVEMENTS:
- First-run experience: no more terminal channel prompt, starts straight into TUI
- Web server enabled by default for new and existing configs
- IRC retry logic for Spade heartbeats on network timeout
- Points from untracked channels now counted in stats

BUGFIXES:
- Fix claim log showing channel ID instead of display name
- Fix auto-select not triggering when matched channels are offline
- Fix drop assigned to multiple channels instead of one